React/.build/deployment_prod.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: registry.emontazysta.pl/emontazysta/frontend:latest
        ports:
          - name: http
            containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
      imagePullSecrets:
        - name: regcred
