React/.build/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
  selector:
    app: frontend
