React/.build/ingressroute_dev.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`emontazysta.pl`)
    priority: 10
    services:
    - kind: Service
      name: frontend
      namespace: development
      port: 80
  tls:
    certResolver: cloudflare
