React/.build/ingressroute_prod.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
spec:
  entryPoints:
    - websecure
    - web
  routes:
  - kind: Rule
    match: Host(`emontazysta.pl`)
    priority: 10
    services:
    - kind: Service
      name: frontend
      namespace: production
      port: 80
  tls:
    certResolver: cloudflare
